--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,14 @@ html, body {
   background-color: #000925;
 }
 
+html,
+body,
+body > div:first-child,
+div#__next,
+div#__next > div {
+  height: 100%;
+}
+
 main {
   padding: 1rem;
 }
@@ -81,7 +89,7 @@ li {
   background-color: #f8f8f8;
   padding: 3rem;
   margin-top: 2rem;
-  border-radius: 0.75rem;
+  border-radius: 1rem;
 }
 
 .container p {
