Build the result UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,14 +25,22 @@ main {
   padding: 1rem;
 }
 
-h1, h2 {
-  color: #eee;
+h1 {
+  padding-bottom: 2rem;
+  color: #000105;
+  font-size: 2rem;
+}
+
+h2 {
+  padding-bottom: 2rem;
+  color: #000105;
+  font-size: 1.8rem;
 }
 
 h3 {
   padding-bottom: 2rem;
   color: #000105;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 button {
